tests/machine/x/ex/update_stmt.error
line 16
    error: undefined variable "people"
    │
 16 │       Enum.map(people, fn it ->
    │                ^^^^^^
    │
    └─ /workspace/mochi/tests/machine/x/ex/update_stmt.exs:16:16: Main.main/0

    warning: variable "name" is unused (if the variable is not meant to be used, prefix it with an underscore)
    │
 17 │         %{name: name, age: age, status: status} = it
    │                 ~
    │
    └─ /workspace/mochi/tests/machine/x/ex/update_stmt.exs:17:17: Main.main/0

    warning: variable "status" is unused (if the variable is not meant to be used, prefix it with an underscore)
    │
 17 │         %{name: name, age: age, status: status} = it
    │                                         ~
    │
    └─ /workspace/mochi/tests/machine/x/ex/update_stmt.exs:17:41: Main.main/0

    warning: variable "people" is unused (if the variable is not meant to be used, prefix it with an underscore)
    │
 15 │     people =
    │     ~~~~~~
    │
    └─ /workspace/mochi/tests/machine/x/ex/update_stmt.exs:15:5: Main.main/0

** (CompileError) /workspace/mochi/tests/machine/x/ex/update_stmt.exs: cannot compile module Main (errors have been logged)


  def main do
    people =
      Enum.map(people, fn it ->
        %{name: name, age: age, status: status} = it

