tests/machine/x/ex/update_stmt.mochi.exs
# Generated by Mochi Elixir compiler
defmodule Main do
  def main do
    # people :: list(Person)
    people = [
      %{name: "Alice", age: 17, status: "minor"},
      %{name: "Bob", age: 25, status: "unknown"},
      %{name: "Charlie", age: 18, status: "unknown"},
      %{name: "Diana", age: 16, status: "minor"}
    ]

    people =
      Enum.map(people, fn it ->
        %{name: name, age: age, status: status} = it

        if age >= 18 do
          %{it | status: "adult", age: age + 1}
        else
          it
        end
      end)

    IO.puts("ok")
  end
end

Main.main()
